[counters] Avoid V8_EXPORT_PRIVATE to speed up compilation under windows

BUG=chromium:668748

Review-Url: https://codereview.chromium.org/2534123002
Cr-Commit-Position: refs/heads/master@{#41351}